--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "cloud-vault",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "build": "prisma generate",
-    "start": "prisma generate && node server.js",
+    "start": "prisma generate && node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "prisma generate"
   },
